<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Food Social Network</string>
    <string name="action_settings">Settings</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_up"><u>Sign Up for FSN</u></string>
    <string name="questionMark">\u003F</string>
    <string name="title_home">Recipe Feed</string>
    <string name="title_recipe">Recipe Information</string>
    <string name="title_profile">My Profile</string>
    <string name="title_searchusers">Search User</string>
    <string name="title_logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="profile_message">Profile Message</string>
    <string name="place_holder">Loading...</string>
    <string name="foods_blacklist">Foods Blacklist</string>
    <string name="user_search_hint">User Name</string>
    <string name="recipe_title">Title</string>
    <string name="recipe_ingredients">Ingredient(s)</string>
    <string name="recipe_ingredient_amount">Amount</string>
    <string name="recipe_ingredient_unit">Unit</string>
    <string name="recipe_ingredient_food">Food</string>
    <string name="recipe_directions">Directions</string>
    <string name="create">Create</string>
        <string name="title_recipe_create">- Create Recipe</string>
    
</resources>