<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:orientation="horizontal" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:baselineAligned="true" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_gravity="clip_horizontal"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceSmallPopupMenu" />

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/place_holder"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_gravity="clip_horizontal"
            android:text="@string/email"
            android:textAppearance="?android:attr/textAppearanceSmallPopupMenu" />

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="165dp"
            android:layout_gravity="clip_horizontal"
            android:layout_weight="1"
            android:text="@string/place_holder"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content" >

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_gravity="clip_horizontal"
            android:text="@string/location"
            android:textAppearance="?android:attr/textAppearanceSmallPopupMenu" />

        <TextView
            android:id="@+id/textViewLocation"
            android:layout_width="0dp"
            android:layout_gravity="clip_horizontal"
            android:layout_weight="1"
            android:text="@string/place_holder"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content" >

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_gravity="clip_horizontal"
            android:text="@string/date_of_birth"
            android:textAppearance="?android:attr/textAppearanceSmallPopupMenu" />

        <TextView
            android:id="@+id/textViewDateOfBirth"
            android:layout_width="match_parent"
            android:layout_gravity="clip_horizontal"
            android:layout_weight="1"
            android:text="@string/place_holder"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:baselineAligned="true" >

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_gravity="clip_horizontal"
            android:text="@string/profile_message"
            android:textAppearance="?android:attr/textAppearanceSmallPopupMenu" />

        <TextView
            android:id="@+id/textViewProfileMessage"
            android:layout_gravity="clip_horizontal"
            android:layout_weight="1"
            android:text="@string/place_holder"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="wrap_content"
        android:baselineAligned="true" >

        <TextView
            android:id="@+id/textView5"
            android:layout_gravity="clip_horizontal"
            android:layout_weight="1"
            android:text="@string/foods_blacklist"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </TableRow>

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="clip_horizontal" >
    </ListView>

</TableLayout>